# nrf52-base

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  bootstrap.sh
lib/: arm-gcc.cmake  flash-softdevice.in  flash.in  jlink.cmake  nrf52-base.cmake  post-build.cmake
lib/components/ble/: ble.cmake
lib/components/device/: device.cmake
lib/components/drivers_ext/: drivers-ext.cmake
lib/components/drivers_nrf/: drivers-nrf.cmake
lib/components/libraries/: libraries.cmake
lib/components/serialization/: serialization.cmake
lib/components/softdevice/: softdevice.cmake
lib/components/toolchain/: toolchain.cmake
work/include/: boards.h  nrf_drv_config.h  sdk_config.h
work/source/: main.c
